2.2 (unreleased)
================

- Nothing changed yet.


2.1.1 (2017-02-01)
==================

- Documentation RST fix
  [tomgross]

2.1 (2017-02-01)
================

- Don't fail, if config properties are set as raw attributes
  [davidjb]

- Update default buildout to Plone 5.0
  [tomgross]

- Support periodic user properties updates
  [sebasgo]

- Exclude user creation and update from plone.protect's CSRF protection
  [sebasgo]

- Test on Plone 5.1
  [tomgross]

2.0 (2016-01-14)
================

- Added challenge header and replacement pattern from WSA
  [tomgross]

- Plone 4.1 - 5.0 compatibility
  [tomgross]

- Ported tests to plone.app.testing
  [tomgross]

- Allow other default roles than Member
  [Sebastian Gottfried]


1.1 (2014-11-06)
================

- Remove triggering of UserLoggedInEvent (shouldn't be done in PAS plugin)
  [gweis]


1.0 (2014-02-26)
================

- Let PAS decide where to store user properties. Allows e.g. Membrane
  to store properties on the user object itself. [gweis]
- Make update of users's properties optional. [gweis]


0.9 (2014-02-04)
================

- Move the password generation function to be an instance method.
  This allows for the potential to override this function and performance
  actions using information drawn from the plugin, request etc.
  [davidjb]
- Update a user's properties when they authenticate. This
  handles the situation where a user's details may change (such as name,
  email address, etc) upon next authentication.
  [davidjb]
- Allow other PAS plugins to handle credentials by calling
  ``updateCredentials`` when authenticating. This allows for existing
  session or cookie plugins (implementing ``ICredentialsUpdatePlugin``)
  to take over handling a user's authentication.
  [davidjb]
- Ensure tests pass on Plone 4.1+.
  [davidjb]


0.8b1 (2010-11-04)
==================

 - Factored out setting of local roles to ShibbolethPermissions
 - Trigger UserLoggedInEvent
 - Added challenge-plugin
