@@ -4,7 +4,8 @@
 __revision__ = '0.1'
 
 from plone.testing import layered
-from Products.AutoUserMakerPASPlugin.tests.base import AUTOUSERMAKERPASPLUGIN_FUNCTIONAL_TESTING
+from Products.AutoUserMakerPASPlugin.testing \
+    import AUTOUSERMAKERPASPLUGIN_FUNCTIONAL_TESTING
 
 import doctest
 import glob
@@ -17,15 +18,15 @@ def listDoctests():
     return [ii for ii in glob.glob(os.path.sep.join([home, '*.txt']))]
 
 
-OPTIONFLAGS = doctest.REPORT_ONLY_FIRST_FAILURE|doctest.ELLIPSIS
+OPTIONFLAGS = doctest.REPORT_ONLY_FIRST_FAILURE | doctest.ELLIPSIS
 
 
 def test_suite():
     tests = [layered(doctest.DocTestSuite('Products.AutoUserMakerPASPlugin.auth',
-                                  optionflags=OPTIONFLAGS),
-                     layer=AUTOUSERMAKERPASPLUGIN_FUNCTIONAL_TESTING),]
+                                          optionflags=OPTIONFLAGS),
+                     layer=AUTOUSERMAKERPASPLUGIN_FUNCTIONAL_TESTING), ]
     tests.extend([layered(doctest.DocFileSuite(os.path.basename(filename),
-                                        optionflags=OPTIONFLAGS),
+                                               optionflags=OPTIONFLAGS),
                           layer=AUTOUSERMAKERPASPLUGIN_FUNCTIONAL_TESTING)
-             for filename in listDoctests()])
+                  for filename in listDoctests()])
     return unittest.TestSuite(tests)
